#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-58
2022-12-16 Mikhail Dubrovin
  app/datinfo - add runnum_env = ds.env().configStore().get(EventId).run()
  app/jungfrau_deploy_constants - add --runrange, change --run from int to str
  src/UtilsJungfrauCalib.py - use --runrange, and changed --run as str

Tag: V02-00-57
2022-12-15 Mikhail Dubrovin
  app/deploy_constants - update USAGE
  src/UtilsDeployConstants.py - remove dssuffix, dsname; add/use dsnamex

Tag: V02-00-56
2022-12-14 Mikhail Dubrovin
  app/epix10ka_pedestals_calibration - add methods check_options and raise_exception
  src/UtilsEpix10kaCalib.py - use runnum from orun.run() in data scan

Tag: V02-00-55
2022-11-17 Mikhail Dubrovin
  app/det_ndarr_raw_proc - switch to ArgumentParser, update list of parameters, move code to UtilsDarkProc.py
  src/GlobalUtils.py - info_command_line_parameters make work with OptionParser and ArgumentParser
  src/UtilsCalib.py - update class DarkProc(); add self.counter, self.status=1
  src/UtilsDarkProc.py - add module with code for app/det_ndarr_raw_proc

2022-11-14 Mikhail Dubrovin
  src/WFDetector.py - code cleaning, remove object from class
  examples/test-issues-2022.py - add issue_2022_11_14
  PyDetectorAccess.py -> py3 - remove object and __future__
  app/jungfrau_ndarr_dark_proc -> py3 - remove object and __future__
  src/UtilsCalib.py

Tag: V02-00-54
2022-11-10 Mikhail Dubrovin
- app/datinfo - fix exp->expname

2022-11-09 Mikhail Dubrovin
- src/UtilsCalib.py - in str_dsname enforce protection for dsname=None

2022-11-08 Mikhail Dubrovin
- COMMON
  - fix issue with jungfrau bad pixel counting below int_lo and above int_hi; gate_lo/hi was used
  - similar code for other detectors was also simplified